Enhance withdraw item logic, and refactor commands