@@ -1,6 +1,7 @@
 package com.eternalcode.economy.config.implementation;
 
 import com.eternalcode.economy.config.item.ConfigItem;
+import com.eternalcode.economy.config.item.WithdrawItemEntry;
 import com.eternalcode.economy.database.DatabaseConfig;
 import com.eternalcode.economy.format.DecimalUnit;
 import eu.okaeri.configs.OkaeriConfig;
@@ -8,10 +9,9 @@ import eu.okaeri.configs.annotation.Comment;
 import org.bukkit.Material;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
-@SuppressWarnings({"FieldMayBeFinal", "FieldCanBeLocal"})
+@SuppressWarnings({ "FieldMayBeFinal", "FieldCanBeLocal" })
 public class PluginConfig extends OkaeriConfig {
 
     @Comment("Units settings")
@@ -37,23 +37,58 @@ public class PluginConfig extends OkaeriConfig {
 
     public static class Units extends OkaeriConfig {
 
-        public List<DecimalUnit> format = Arrays.asList(
-            new DecimalUnit(1_000L, 'k'),
-            new DecimalUnit(1_000_000L, 'm'),
-            new DecimalUnit(1_000_000_000L, 'b'),
-            new DecimalUnit(1_000_000_000_000L, 't'),
-            new DecimalUnit(1_000_000_000_000_000L, 'p'),
-            new DecimalUnit(1_000_000_000_000_000_000L, 'e')
-        );
+        public List<DecimalUnit> format = List.of(
+                new DecimalUnit(1_000L, 'k'),
+                new DecimalUnit(1_000_000L, 'm'),
+                new DecimalUnit(1_000_000_000L, 'b'),
+                new DecimalUnit(1_000_000_000_000L, 't'),
+                new DecimalUnit(1_000_000_000_000_000L, 'p'),
+                new DecimalUnit(1_000_000_000_000_000_000L, 'e'));
     }
 
     public static class WithdrawItem extends OkaeriConfig {
+
+        @Comment("Cooldown in seconds between withdraw commands (0 = disabled)")
+        public int cooldownSeconds = 5;
+
+        @Comment("Default item used when multi-item system is disabled or as fallback")
         public ConfigItem item = ConfigItem.builder()
-            .withName("<white>Check worth <green>{VALUE}$")
-            .withLore(List.of("<gray>Right click to redeem"))
-            .withMaterial(Material.PAPER)
-            .withTexture(0)
-            .withGlow(true)
-            .build();
+                .withName("<white>Check worth <green>{VALUE}$")
+                .withLore(List.of("<gray>Right click to redeem"))
+                .withMaterial(Material.PAPER)
+                .withTexture(0)
+                .withGlow(true)
+                .build();
+
+        @Comment({
+                "Enable multi-item system: different items for different banknote values",
+                "When disabled, always uses the default 'item' above"
+        })
+        public boolean multiItemEnabled = false;
+
+        @Comment({
+                "Item configurations for specific value thresholds",
+                "System selects the entry with highest minValue <= banknote value",
+                "Example: minValue 1.0 = coins, minValue 100.0 = banknotes"
+        })
+        public List<WithdrawItemEntry> multiItemEntries = List.of(
+                new WithdrawItemEntry(
+                        BigDecimal.ONE,
+                        ConfigItem.builder()
+                                .withName("<white>Coin worth <green>{VALUE}$")
+                                .withLore(List.of("<gray>Right click to redeem"))
+                                .withMaterial(Material.GOLD_NUGGET)
+                                .withTexture(1)
+                                .withGlow(false)
+                                .build()),
+                new WithdrawItemEntry(
+                        BigDecimal.valueOf(100),
+                        ConfigItem.builder()
+                                .withName("<white>Banknote worth <green>{VALUE}$")
+                                .withLore(List.of("<gray>Right click to redeem"))
+                                .withMaterial(Material.PAPER)
+                                .withTexture(100)
+                                .withGlow(true)
+                                .build()));
     }
 }
